[tool.poetry]
name = "misskeycrawler"
version = "0.1.0"
description = "misskey crawler"
authors = ["shift <fantasy_world4423-git@yahoo.co.jp>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
httpx = "^0.24.1"
isort = "^5.12.0"
misskey-py = "^4.1.0"
mock = "^5.0.1"
orjson = "^3.9.5"
pycodestyle = "^2.10.0"
python = "^3.11,<4.0"
sqlalchemy = "^2.0.20"


[tool.isort]
line_length = 256
multi_line_output = 9

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
